[package]
name = "bitcask-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
crc32fast = "1.3.2"
jammdb = "0.11.0"
log = "0.4.20"
memmap2 = "0.9.3"
parking_lot = "0.12.1"
prost = "0.12.3"
thiserror = "1.0.56"
